maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: '=>' expected but '=' found.
      case nb if nb=0 => if (!estFaceMur()){avance()}
                   ^RandomMouseMaze:8: error: '=>' expected but '=' found.
      case nb if nb=1 => gauche() if (!estFaceMur()){avance()}else{droite()}
                   ^RandomMouseMaze:9: error: ';' expected but 'if' found.
      case _ => droite() if (!estFaceMur()){avance()}else{gauche()}
                         ^